refactor integration test suite and align testing architecture
Changes to be committed:
	modified:   src/test/java/com/example/faz/controller/TransactionControllerTest.java
	modified:   src/test/java/com/example/faz/integration/TransactionIntegrationTest.java
	modified:   src/test/java/com/example/faz/service/TransactionServiceTest.java