@@ -3,7 +3,6 @@ package com.example.faz.controller;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.ArgumentMatchers.anyLong;
 import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.doNothing;
 import static org.mockito.Mockito.doThrow;
@@ -126,7 +125,7 @@ public class TransactionControllerTest {
 		List<TransactionResponse> responses = responses(result);
 
 		assertEquals(1, responses.size());
-		assertResponse(responses.get(0), id, amount, description);
+		assertResponse(responses.getFirst(), id, amount, description);
 	}
 
 	@Test
@@ -146,7 +145,7 @@ public class TransactionControllerTest {
 
 		List<TransactionResponse> responses = responses(result);
 		assertEquals(1, responses.size());
-		assertResponse(responses.get(0), id, amount, description);
+		assertResponse(responses.getFirst(), id, amount, description);
 	}
 
 	@Test
